added paradigm ppt

--- a/study1/experiment/english.html
+++ b/study1/experiment/english.html
@@ -81,11 +81,11 @@
     // // Questionnaire =======================================================
     // timeline.push(instructions_questionnaires)
     // timeline.push(questionnaire_bait)
-    timeline.push(questionnaire_cops)
+    // timeline.push(questionnaire_cops)
 
     // Fiction (part 2) ====================================================
-    timeline.push(fiction_instructions2)
-    // timeline.push(fiction_trials_realness)
+    // timeline.push(fiction_instructions2)
+    timeline.push(fiction_trials_realness)
     timeline.push(fiction_feedback1)
     timeline.push(fiction_feedback2)
 
