--- a/study1/experiment/english.html
+++ b/study1/experiment/english.html
@@ -85,7 +85,7 @@
 
     // Fiction (part 2) ====================================================
     // timeline.push(fiction_instructions2)
-    timeline.push(fiction_trials_realness)
+    // timeline.push(fiction_trials_realness)
     timeline.push(fiction_feedback1)
     timeline.push(fiction_feedback2)
 
