--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -107,9 +107,11 @@
 
     // Demographics ===========================================================
     timeline.push(demographics_browser_info)
+
+    timeline.push(questionnaire_cops)
     // timeline.push(demographics_consent)
     timeline.push(demographics_questions)
-    // timeline.push(fiction_preloadstims)
+    timeline.push(fiction_preloadstims)
 
     //Save only demo data
     // timeline.push({
@@ -135,35 +137,35 @@
         timeline: [fiction_instructions1],
         on_finish() {
             //Phase 1A -------------------------------------------------------------
-            timeline.push({
-                timeline_variables: stimuli.slice(
-                    0,
-                    Math.ceil(stimuli.length / 2)
-                ),
-                timeline: [
-                    fiction_fixation1a,
-                    fiction_cue,
-                    fiction_fixation1b,
-                    fiction_showimage1,
-                    fiction_ratings1,
-                ],
-            })
+            // timeline.push({
+            //     timeline_variables: stimuli.slice(
+            //         0,
+            //         Math.ceil(stimuli.length / 2)
+            //     ),
+            //     timeline: [
+            //         fiction_fixation1a,
+            //         fiction_cue,
+            //         fiction_fixation1b,
+            //         fiction_showimage1,
+            //         fiction_ratings1,
+            //     ],
+            // })
 
             // Break ----------------------------------------------------------------
-            timeline.push(fiction_phase1_break)
-            timeline.push(eyetracking_recalibration)
+            // timeline.push(fiction_phase1_break)
+            // timeline.push(eyetracking_recalibration)
 
             //Save phase 1 before break data
-            timeline.push({
-                type: jsPsychPipe,
-                action: "save",
-                experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
-                filename: `${participant_ID}_break.csv`,
-                data_string: () => jsPsych.data.get().csv(),
-                on_finish: function () {
-                    finished_experiment = true
-                }
-            })
+            // timeline.push({
+            //     type: jsPsychPipe,
+            //     action: "save",
+            //     experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
+            //     filename: `${participant_ID}_break.csv`,
+            //     data_string: () => jsPsych.data.get().csv(),
+            //     on_finish: function () {
+            //         finished_experiment = true
+            //     }
+            // })
 
             // Phase 1B -------------------------------------------------------------
             timeline.push({
