--- a/study1/experiment/english.html
+++ b/study1/experiment/english.html
@@ -1,120 +1,114 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <!-- Title shown in tab -->
+        <title>Experiment</title>
 
-<head>
-    <!-- Title shown in tab -->
-    <title>Experiment</title>
+        <!-- Load plugins used in Demographics -->
+        <script src="https://unpkg.com/jspsych@7.3.4"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
 
-    <!-- Load plugins used in Demographics -->
-    <script src="https://unpkg.com/jspsych@7.3.4"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.2.1"></script>
+        <!-- To save data via DataPipe (for online experiments) -->
+        <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.3"></script>
 
-    <!-- To save data via DataPipe (for online experiments) -->
-    <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.3"></script>
+        <!-- Load scripts -->
+        <script src="https://realitybending.github.io/JSmisc/jspsych_extensions/plugin-multiple-slider.js"></script>
+        <script src="instructions_english.js"></script>
+        <script src="demographics.js"></script>
+        <script src="questionnaires.js"></script>
 
-    <!-- Load scripts -->
-    <script src="https://realitybending.github.io/JSmisc/jspsych_extensions/plugin-multiple-slider.js"></script>
-    <script src="instructions_english.js"></script>
-    <script src="demographics.js"></script>
-    <script src="questionnaires.js"></script>
+        <!-- Load task -->
+        <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select@1.1.3"></script>
+        <script src="stimuli_selection/stimuli_list.js"></script>
+        <script src="fiction.js"></script>
 
-    <!-- Load task -->
-    <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.3"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select@1.1.3"></script>
-    <script src="stimuli_selection/stimuli_list.js"></script>
-    <script src="fiction.js"></script>
-
-    <link href="https://unpkg.com/jspsych/css/jspsych.css" rel="stylesheet" type="text/css" />
-    <style>
-        /* set canvas to be full screen */
-        .jspsych-content {
-            max-width: 100%;
-        }
-
-        .narrow-text {
-            max-width: 50%;
-        }
-    </style>
-</head>
-
-<body></body>
-
-<script>
-    // Initialize experiment =================================================
-    var timeline = []
-
-    var jsPsych = initJsPsych({
-        on_finish: function () {
-            // jsPsych.data.displayData("json") // Display data in browser
-            let sona_id = jsPsych.data.urlVariables()["sona_id"]
-            if (sona_id != undefined) {
-                window.location =
-                    "https://sussexpsychology.sona-systems.com/webstudy_credit.aspx?experiment_id=1836&credit_token=50011868c1fa42cfb67bfa0fabdc9a98&survey_code=" +
-                    sona_id
-            } else {
-                window.location = "https://realitybending.github.io/"
+        <link href="https://unpkg.com/jspsych/css/jspsych.css" rel="stylesheet" type="text/css" />
+        <style>
+            /* set canvas to be full screen */
+            .jspsych-content {
+                max-width: 100%;
             }
-        },
-    })
 
-    // Demographics ========================================================
-    // timeline.push(fullscreen_on) // Enter fullscreen mode
-    // timeline.push(demographics_browser_info)
-    // timeline.push(demographics_consent)
+            .narrow-text {
+                max-width: 50%;
+            }
+        </style>
+    </head>
 
-    // // timeline.push(demographics_info)
-    // // timeline.push(demographics_hormones)
-    // // timeline.push(demographics_other)
+    <body></body>
 
-    // // // Fiction (part 1) ====================================================
-    // timeline.push(fiction_preloadstims)
-    // timeline.push(fiction_instructions1)
-    // timeline.push(fiction_trials)
+    <script>
+        // Initialize experiment =================================================
+        var timeline = []
 
-    // // Questionnaire =======================================================
-    // timeline.push(instructions_questionnaires)
-    // timeline.push(questionnaire_bait)
-    // timeline.push(questionnaire_cops)
+        var jsPsych = initJsPsych({
+            on_finish: function () {
+                // jsPsych.data.displayData("json") // Display data in browser
+                let sona_id = jsPsych.data.urlVariables()["sona_id"]
+                if (sona_id != undefined) {
+                    window.location =
+                        "https://sussexpsychology.sona-systems.com/webstudy_credit.aspx?experiment_id=1836&credit_token=50011868c1fa42cfb67bfa0fabdc9a98&survey_code=" +
+                        sona_id
+                } else {
+                    window.location = "https://realitybending.github.io/"
+                }
+            },
+        })
 
-    // Fiction (part 2) ====================================================
-    // timeline.push(fiction_instructions2)
-    // timeline.push(fiction_trials_realness)
-    timeline.push(fiction_feedback1)
-    timeline.push(fiction_feedback2)
+        // Demographics ========================================================
+        timeline.push(fullscreen_on) // Enter fullscreen mode
+        timeline.push(demographics_browser_info)
+        timeline.push(demographics_consent)
 
-    // End =================================================================
+        timeline.push(demographics_info)
+        timeline.push(demographics_hormones)
+        timeline.push(demographics_other)
 
-    timeline.push(demographics_debriefing)
+        // Fiction (part 1) ====================================================
+        timeline.push(fiction_preloadstims)
+        timeline.push(fiction_instructions1)
+        timeline.push(fiction_trials)
 
-    // Save data via DataPipe
-    timeline.push({
-        type: jsPsychPipe,
-        action: "save",
-        experiment_id: "OKYIgAxQu8cX", // This in generated in the DataPipe interface
-        filename: `${jsPsych.randomization.randomID(10)}.csv`,
-        data_string: () => jsPsych.data.get().csv(),
-    })
+        // Questionnaire =======================================================
+        timeline.push(instructions_questionnaires)
+        timeline.push(questionnaire_bait)
+        timeline.push(questionnaire_cops)
 
-    // Exit fullscreen mode
-    timeline.push(fullscreen_off)
+        // Fiction (part 2) ====================================================
+        timeline.push(fiction_instructiomns2)
+        timeline.push(fiction_trials_realness)
+        timeline.push(fiction_feedback1)
+        timeline.push(fiction_feedback2)
 
-    timeline.push(
-        demographics_endscreen(
-            "https://realitybending.github.io/FictionEro/experiment/english?exp=snow&lang=en"
-        )
-    )
+        // End =================================================================
 
-    /* ----------------- Run the timeline ----------------- */
-    jsPsych.run(timeline)
-    // jsPsych.simulate(timeline, "visual")
-    // jsPsych.simulate(timeline, "data-only")
-</script>
+        timeline.push(demographics_debriefing)
 
+        // Save data via DataPipe
+        timeline.push({
+            type: jsPsychPipe,
+            action: "save",
+            experiment_id: "OKYIgAxQu8cX", // This in generated in the DataPipe interface
+            filename: `${jsPsych.randomization.randomID(10)}.csv`,
+            data_string: () => jsPsych.data.get().csv(),
+        })
+
+        // Exit fullscreen mode
+        timeline.push(fullscreen_off)
+
+        timeline.push(demographics_endscreen("https://realitybending.github.io/FictionEro/experiment/english?exp=snow&lang=en"))
+
+        /* ----------------- Run the timeline ----------------- */
+        jsPsych.run(timeline)
+        // jsPsych.simulate(timeline, "visual")
+        // jsPsych.simulate(timeline, "data-only")
+    </script>
 </html>
